--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appfashion",
+  "name": "appubereats",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "flint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
@@ -17,6 +18,7 @@
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
     "react": "16.13.1",
+    "react-dom": "^16.13.1",
     "react-is": "16.8.0",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
