--- a/ios/appfashion.xcodeproj/xcshareddata/xcschemes/appfashion.xcscheme
+++ b/ios/appfashion.xcodeproj/xcshareddata/xcschemes/appfashion.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "appfashion.app"
-               BlueprintName = "appfashion"
-               ReferencedContainer = "container:appfashion.xcodeproj">
+               BuildableName = "appubereats.app"
+               BlueprintName = "appubereats"
+               ReferencedContainer = "container:appubereats.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "appfashionTests.xctest"
-               BlueprintName = "appfashionTests"
-               ReferencedContainer = "container:appfashion.xcodeproj">
+               BuildableName = "appubereatsTests.xctest"
+               BlueprintName = "appubereatsTests"
+               ReferencedContainer = "container:appubereats.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "appfashion.app"
-            BlueprintName = "appfashion"
-            ReferencedContainer = "container:appfashion.xcodeproj">
+            BuildableName = "appubereats.app"
+            BlueprintName = "appubereats"
+            ReferencedContainer = "container:appubereats.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "appfashion.app"
-            BlueprintName = "appfashion"
-            ReferencedContainer = "container:appfashion.xcodeproj">
+            BuildableName = "appubereats.app"
+            BlueprintName = "appubereats"
+            ReferencedContainer = "container:appubereats.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
